--- a/src/2. Classical ML Methods/elena/SVM_w2v_grid_new_data.ipynb
+++ b/src/2. Classical ML Methods/elena/SVM_w2v_grid_new_data.ipynb
@@ -47,7 +47,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_train, X_test, y_train, y_test = vectorize_tfidf(df=df_cleaned, text_column='tweet_cleaned', \n",
+    "X_train, X_test, y_train, y_test = vectorize_w2v(df=df_cleaned, text_column='tweet_cleaned', \n",
     "                                                                                 label_column=\"label\")"
    ]
   },
@@ -96,9 +96,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "X_train shape (42879, 10992)\n",
+      "X_train shape (42879, 300)\n",
       "y_train shape (42879,)\n",
-      "X_test shape (18378, 10992)\n",
+      "X_test shape (18378, 300)\n",
       "y_test shape (18378,)\n"
      ]
     }
@@ -123,89 +123,6 @@
    "metadata": {},
    "source": [
     "# SVM\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# results_list = []\n",
-    "\n",
-    "# param_combinations = [\n",
-    "#     {'C': 1, 'gamma': 1, 'class_weight': {0: 1, 1: 3}},\n",
-    "#     {'C': 1, 'gamma': 0.1, 'class_weight': {0: 1, 1: 5}},\n",
-    "#     {'C': 0.1, 'gamma': 1, 'class_weight': {0: 1, 1: 5}}\n",
-    "# ]\n",
-    "\n",
-    "# svm = SVC(kernel='sigmoid', random_state=42)  \n",
-    "\n",
-    "# for params in param_combinations:\n",
-    "#     model = SVC(kernel='sigmoid', C=params['C'], gamma=params['gamma'], \n",
-    "#                 class_weight=params['class_weight'], random_state=42)\n",
-    "#     model.fit(X_train, y_train)\n",
-    "\n",
-    "#     y_train_pred = model.predict(X_train)\n",
-    "#     y_test_pred = model.predict(X_test)\n",
-    "\n",
-    "#     train_report = classification_report(y_train, y_train_pred, output_dict=True)\n",
-    "#     test_report = classification_report(y_test, y_test_pred, output_dict=True)\n",
-    "\n",
-    "#     train_accuracy = accuracy_score(y_train, y_train_pred)\n",
-    "#     train_recall = recall_score(y_train, y_train_pred)\n",
-    "#     train_precision = precision_score(y_train, y_train_pred)\n",
-    "#     train_f1 = f1_score(y_train, y_train_pred)\n",
-    "\n",
-    "#     test_accuracy = accuracy_score(y_test, y_test_pred)\n",
-    "#     test_recall = recall_score(y_test, y_test_pred)\n",
-    "#     test_precision = precision_score(y_test, y_test_pred)\n",
-    "#     test_f1 = f1_score(y_test, y_test_pred)\n",
-    "\n",
-    "#     result_dict = {\n",
-    "#         'vectorization': 'w2v',\n",
-    "#         'kernel': 'sigmoid',\n",
-    "#         'degree': 'X',   \n",
-    "#         'C': params['C'],\n",
-    "#         'gamma': params['gamma'],\n",
-    "#         'class_weight': params['class_weight'],\n",
-    "\n",
-    "#         # Train metrics\n",
-    "#         'train_precision_0': train_report['0']['precision'],\n",
-    "#         'train_recall_0': train_report['0']['recall'],\n",
-    "#         'train_f1_0': train_report['0']['f1-score'],\n",
-    "#         'train_support_0': train_report['0']['support'],\n",
-    "#         'train_precision_1': train_report['1']['precision'],\n",
-    "#         'train_recall_1': train_report['1']['recall'],\n",
-    "#         'train_f1_1': train_report['1']['f1-score'],\n",
-    "#         'train_support_1': train_report['1']['support'],\n",
-    "#         'train_accuracy': train_accuracy,\n",
-    "#         'train_recall': train_recall,\n",
-    "#         'train_precision': train_precision,\n",
-    "#         'train_f1': train_f1,\n",
-    "\n",
-    "#         # Test metrics\n",
-    "#         'test_precision_0': test_report['0']['precision'],\n",
-    "#         'test_recall_0': test_report['0']['recall'],\n",
-    "#         'test_f1_0': test_report['0']['f1-score'],\n",
-    "#         'test_support_0': test_report['0']['support'],\n",
-    "#         'test_precision_1': test_report['1']['precision'],\n",
-    "#         'test_recall_1': test_report['1']['recall'],\n",
-    "#         'test_f1_1': test_report['1']['f1-score'],\n",
-    "#         'test_support_1': test_report['1']['support'],\n",
-    "#         'test_accuracy': test_accuracy,\n",
-    "#         'test_recall': test_recall,\n",
-    "#         'test_precision': test_precision,\n",
-    "#         'test_f1': test_f1\n",
-    "#     }\n",
-    "\n",
-    "#     results_list.append(result_dict)\n",
-    "\n",
-    "# results_df = pd.DataFrame(results_list)\n",
-    "\n",
-    "# results_df.to_csv('svm_tfidf_sigmoid_new_data', index=False)\n",
-    "\n",
-    "# print(results_df)\n"
    ]
   },
   {
@@ -284,8 +201,8 @@
     "param_grid = {\n",
     "    'kernel': ['sigmoid'],\n",
     "    #'degree': [3, 4, 5],\n",
-    "    'C': [0.9, 1],\n",
-    "    'gamma': [0.9, 1],\n",
+    "    'C': [0.01, 0.1, 1],\n",
+    "    'gamma': [0.01, 0.1, 1],\n",
     "    'random_state': [42],\n",
     "    'class_weight': [{0: 1, 1: 1}, {0: 1, 1: 3}, {0: 1, 1: 5}]\n",
     "}\n",
@@ -359,116 +276,9 @@
     "\n",
     "results_df = pd.DataFrame(results_list)\n",
     "\n",
-    "results_df.to_csv('svm_grid_tfidf_sigmoid_new_data.csv', index=False)\n",
+    "results_df.to_csv('svm_grid_w2v_sigmoid_new_data.csv', index=False)\n",
     "\n",
     "print(results_df)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "  vectorization  kernel degree  C  gamma  class_weight  train_precision_0  \\\n",
-      "0           w2v  linear      X  1   0.10  {0: 1, 1: 3}           0.943711   \n",
-      "1           w2v  linear      X  1   1.00  {0: 1, 1: 3}           0.943711   \n",
-      "2           w2v  linear      X  1   0.01  {0: 1, 1: 3}           0.943711   \n",
-      "\n",
-      "   train_recall_0  train_f1_0  train_support_0  ...  test_f1_0  \\\n",
-      "0        0.853331    0.896249            33695  ...   0.849625   \n",
-      "1        0.853331    0.896249            33695  ...   0.849625   \n",
-      "2        0.853331    0.896249            33695  ...   0.849625   \n",
-      "\n",
-      "   test_support_0  test_precision_1  test_recall_1  test_f1_1  test_support_1  \\\n",
-      "0           14459          0.477334        0.63409   0.544658            3919   \n",
-      "1           14459          0.477334        0.63409   0.544658            3919   \n",
-      "2           14459          0.477334        0.63409   0.544658            3919   \n",
-      "\n",
-      "   test_accuracy  test_recall  test_precision   test_f1  \n",
-      "0       0.773914      0.63409        0.477334  0.544658  \n",
-      "1       0.773914      0.63409        0.477334  0.544658  \n",
-      "2       0.773914      0.63409        0.477334  0.544658  \n",
-      "\n",
-      "[3 rows x 30 columns]\n"
-     ]
-    }
-   ],
-   "source": [
-    "# results_list = []\n",
-    "\n",
-    "# param_combinations = [\n",
-    "#     {'kernel': 'linear', 'C': 1, 'gamma': 0.1, 'class_weight': {0: 1, 1: 3}},#random state?\n",
-    "#     {'kernel': 'linear', 'C': 1, 'gamma': 1, 'class_weight': {0: 1, 1: 3}},\n",
-    "#     {'kernel': 'linear', 'C': 1, 'gamma': 0.01, 'class_weight': {0: 1, 1: 3}}\n",
-    "# ]\n",
-    "\n",
-    "# for params in param_combinations:\n",
-    "#     model = SVC(**params)\n",
-    "#     model.fit(X_train, y_train)\n",
-    "\n",
-    "#     y_train_pred = model.predict(X_train)\n",
-    "#     y_test_pred = model.predict(X_test)\n",
-    "\n",
-    "#     train_report = classification_report(y_train, y_train_pred, output_dict=True)\n",
-    "#     test_report = classification_report(y_test, y_test_pred, output_dict=True)\n",
-    "\n",
-    "#     train_accuracy = accuracy_score(y_train, y_train_pred)\n",
-    "#     train_recall = recall_score(y_train, y_train_pred)\n",
-    "#     train_precision = precision_score(y_train, y_train_pred)\n",
-    "#     train_f1 = f1_score(y_train, y_train_pred)\n",
-    "\n",
-    "#     test_accuracy = accuracy_score(y_test, y_test_pred)\n",
-    "#     test_recall = recall_score(y_test, y_test_pred)\n",
-    "#     test_precision = precision_score(y_test, y_test_pred)\n",
-    "#     test_f1 = f1_score(y_test, y_test_pred)\n",
-    "\n",
-    "#     result_dict = {\n",
-    "#         'vectorization': 'w2v',\n",
-    "#         'kernel': params['kernel'],\n",
-    "#         'degree': 'X',\n",
-    "#         'C': params['C'],\n",
-    "#         'gamma': params['gamma'],\n",
-    "#         'class_weight': params['class_weight'],\n",
-    "\n",
-    "#         # Train metrics\n",
-    "#         'train_precision_0': train_report['0']['precision'],\n",
-    "#         'train_recall_0': train_report['0']['recall'],\n",
-    "#         'train_f1_0': train_report['0']['f1-score'],\n",
-    "#         'train_support_0': train_report['0']['support'],\n",
-    "#         'train_precision_1': train_report['1']['precision'],\n",
-    "#         'train_recall_1': train_report['1']['recall'],\n",
-    "#         'train_f1_1': train_report['1']['f1-score'],\n",
-    "#         'train_support_1': train_report['1']['support'],\n",
-    "#         'train_accuracy': train_accuracy,\n",
-    "#         'train_recall': train_recall,\n",
-    "#         'train_precision': train_precision,\n",
-    "#         'train_f1': train_f1,\n",
-    "\n",
-    "#         # Test metrics\n",
-    "#         'test_precision_0': test_report['0']['precision'],\n",
-    "#         'test_recall_0': test_report['0']['recall'],\n",
-    "#         'test_f1_0': test_report['0']['f1-score'],\n",
-    "#         'test_support_0': test_report['0']['support'],\n",
-    "#         'test_precision_1': test_report['1']['precision'],\n",
-    "#         'test_recall_1': test_report['1']['recall'],\n",
-    "#         'test_f1_1': test_report['1']['f1-score'],\n",
-    "#         'test_support_1': test_report['1']['support'],\n",
-    "#         'test_accuracy': test_accuracy,\n",
-    "#         'test_recall': test_recall,\n",
-    "#         'test_precision': test_precision,\n",
-    "#         'test_f1': test_f1\n",
-    "#     }\n",
-    "\n",
-    "#     results_list.append(result_dict)\n",
-    "\n",
-    "# results_df = pd.DataFrame(results_list)\n",
-    "# results_df.to_csv('svm_tfidf_linear_new_data.csv', index=False)\n",
-    "\n",
-    "# print(results_df)\n"
    ]
   },
   {
@@ -547,8 +357,8 @@
     "param_grid = {\n",
     "    'kernel': ['linear'],\n",
     "    #'degree': [3, 4, 5],\n",
-    "    'C': [0.9, 1],\n",
-    "    'gamma': [0.9, 1],\n",
+    "    'C': [0.1, 1.0],\n",
+    "    'gamma': [0.01, 0.1, 1],\n",
     "    'random_state': [42],\n",
     "    'class_weight': [{0: 1, 1: 1}, {0: 1, 1: 3}, {0: 1, 1: 5}]\n",
     "}\n",
@@ -622,7 +432,7 @@
     "\n",
     "results_df = pd.DataFrame(results_list)\n",
     "\n",
-    "results_df.to_csv('svm_grid_tfidf_linear_new_data.csv', index=False)\n",
+    "results_df.to_csv('svm_grid_w2v_linear_new_data.csv', index=False)\n",
     "\n",
     "print(results_df)\n"
    ]
@@ -751,8 +561,8 @@
     "param_grid = {\n",
     "    'kernel': ['poly'],\n",
     "    'degree': [3, 4],\n",
-    "    'C': [0.9, 1],\n",
-    "    'gamma': [0.9, 1],\n",
+    "    'C': [0.1, 1],\n",
+    "    'gamma': [0.1, 1],\n",
     "    'random_state': [42],\n",
     "    'class_weight': [{0: 1, 1: 1}, {0: 1, 1: 3}, {0: 1, 1: 5}]\n",
     "}\n",
@@ -826,7 +636,7 @@
     "\n",
     "results_df = pd.DataFrame(results_list)\n",
     "\n",
-    "results_df.to_csv('svm_tfidf_poly_new_data.csv', index=False)\n",
+    "results_df.to_csv('svm_w2v_poly_new_data.csv', index=False)\n",
     "\n",
     "\n",
     "print(results_df)\n",
@@ -835,47 +645,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Fitting 3 folds for each of 6 candidates, totalling 18 fits\n",
-      "  vectorization kernel degree  C  gamma  random_state  class_weight  \\\n",
-      "0         tfidf    rbf      X  1    0.9            42  {0: 1, 1: 1}   \n",
-      "1         tfidf    rbf      X  1    1.0            42  {0: 1, 1: 1}   \n",
-      "2         tfidf    rbf      X  1    0.9            42  {0: 1, 1: 3}   \n",
-      "3         tfidf    rbf      X  1    1.0            42  {0: 1, 1: 3}   \n",
-      "4         tfidf    rbf      X  1    0.9            42  {0: 1, 1: 5}   \n",
-      "5         tfidf    rbf      X  1    1.0            42  {0: 1, 1: 5}   \n",
-      "\n",
-      "   train_precision_0  train_recall_0  train_f1_0  ...  test_f1_0  \\\n",
-      "0           0.889891        0.992521    0.938408  ...   0.897335   \n",
-      "1           0.902826        0.993471    0.945982  ...   0.897413   \n",
-      "2           0.998200        0.971123    0.984476  ...   0.887863   \n",
-      "3           0.998909        0.978038    0.988363  ...   0.890199   \n",
-      "4           0.999816        0.968897    0.984114  ...   0.886094   \n",
-      "5           0.999878        0.975664    0.987623  ...   0.888956   \n",
-      "\n",
-      "   test_support_0  test_precision_1  test_recall_1  test_f1_1  test_support_1  \\\n",
-      "0           14459          0.743680       0.270222   0.396407            3919   \n",
-      "1           14459          0.741201       0.274050   0.400149            3919   \n",
-      "2           14459          0.591165       0.508803   0.546901            3919   \n",
-      "3           14459          0.604563       0.486859   0.539364            3919   \n",
-      "4           14459          0.582499       0.519775   0.549353            3919   \n",
-      "5           14459          0.597769       0.492217   0.539882            3919   \n",
-      "\n",
-      "   test_accuracy  test_recall  test_precision   test_f1  \n",
-      "0       0.824518     0.270222        0.743680  0.396407  \n",
-      "1       0.824791     0.274050        0.741201  0.400149  \n",
-      "2       0.820220     0.508803        0.591165  0.546901  \n",
-      "3       0.822668     0.486859        0.604563  0.539364  \n",
-      "4       0.818152     0.519775        0.582499  0.549353  \n",
-      "5       0.821090     0.492217        0.597769  0.539882  \n",
-      "\n",
-      "[6 rows x 31 columns]\n"
+      "Fitting 3 folds for each of 12 candidates, totalling 36 fits\n"
      ]
     }
    ],
@@ -885,8 +662,8 @@
     "param_grid = {\n",
     "    'kernel': ['rbf'],\n",
     "    #'degree': [],\n",
-    "    'C': [1],\n",
-    "    'gamma': [0.9, 1],\n",
+    "    'C': [0.1, 1],\n",
+    "    'gamma': [0.01, 0.1],\n",
     "    'random_state': [42],\n",
     "    'class_weight': [{0: 1, 1: 1}, {0: 1, 1: 3}, {0: 1, 1: 5}]\n",
     "}\n",
@@ -961,10 +738,17 @@
     "\n",
     "results_df = pd.DataFrame(results_list)\n",
     "\n",
-    "results_df.to_csv('svm_tfidf_rbf_new_data.csv', index=False)\n",
+    "results_df.to_csv('svm_w2v_rbf_new_data.csv', index=False)\n",
     "\n",
     "print(results_df)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
