--- a/src/2. Classical ML Methods/elena/SVM_w2v_grid_new_data.ipynb
+++ b/src/2. Classical ML Methods/elena/SVM_w2v_grid_new_data.ipynb
@@ -136,60 +136,60 @@
      "text": [
       "Fitting 3 folds for each of 12 candidates, totalling 36 fits\n",
       "   vectorization   kernel degree    C  gamma  random_state  class_weight  \\\n",
-      "0          tfidf  sigmoid      X  0.9    0.9            42  {0: 1, 1: 1}   \n",
-      "1          tfidf  sigmoid      X  0.9    1.0            42  {0: 1, 1: 1}   \n",
-      "2          tfidf  sigmoid      X  0.9    0.9            42  {0: 1, 1: 3}   \n",
-      "3          tfidf  sigmoid      X  0.9    1.0            42  {0: 1, 1: 3}   \n",
-      "4          tfidf  sigmoid      X  0.9    0.9            42  {0: 1, 1: 5}   \n",
-      "5          tfidf  sigmoid      X  0.9    1.0            42  {0: 1, 1: 5}   \n",
-      "6          tfidf  sigmoid      X  1.0    0.9            42  {0: 1, 1: 1}   \n",
+      "0          tfidf  sigmoid      X  0.1    0.1            42  {0: 1, 1: 1}   \n",
+      "1          tfidf  sigmoid      X  0.1    1.0            42  {0: 1, 1: 1}   \n",
+      "2          tfidf  sigmoid      X  0.1    0.1            42  {0: 1, 1: 3}   \n",
+      "3          tfidf  sigmoid      X  0.1    1.0            42  {0: 1, 1: 3}   \n",
+      "4          tfidf  sigmoid      X  0.1    0.1            42  {0: 1, 1: 5}   \n",
+      "5          tfidf  sigmoid      X  0.1    1.0            42  {0: 1, 1: 5}   \n",
+      "6          tfidf  sigmoid      X  1.0    0.1            42  {0: 1, 1: 1}   \n",
       "7          tfidf  sigmoid      X  1.0    1.0            42  {0: 1, 1: 1}   \n",
-      "8          tfidf  sigmoid      X  1.0    0.9            42  {0: 1, 1: 3}   \n",
+      "8          tfidf  sigmoid      X  1.0    0.1            42  {0: 1, 1: 3}   \n",
       "9          tfidf  sigmoid      X  1.0    1.0            42  {0: 1, 1: 3}   \n",
-      "10         tfidf  sigmoid      X  1.0    0.9            42  {0: 1, 1: 5}   \n",
+      "10         tfidf  sigmoid      X  1.0    0.1            42  {0: 1, 1: 5}   \n",
       "11         tfidf  sigmoid      X  1.0    1.0            42  {0: 1, 1: 5}   \n",
       "\n",
       "    train_precision_0  train_recall_0  train_f1_0  ...  test_f1_0  \\\n",
-      "0            0.828167        0.976940    0.896423  ...   0.895619   \n",
-      "1            0.828609        0.972518    0.894814  ...   0.895126   \n",
-      "2            0.906269        0.805758    0.853063  ...   0.844964   \n",
-      "3            0.899300        0.793263    0.842960  ...   0.841426   \n",
-      "4            0.928557        0.673869    0.780973  ...   0.768003   \n",
-      "5            0.918059        0.657041    0.765923  ...   0.760002   \n",
-      "6            0.829785        0.974981    0.896542  ...   0.895443   \n",
-      "7            0.830006        0.969847    0.894494  ...   0.895566   \n",
-      "8            0.904802        0.803057    0.850899  ...   0.843242   \n",
-      "9            0.897013        0.788663    0.839356  ...   0.838012   \n",
-      "10           0.927047        0.670545    0.778204  ...   0.767643   \n",
-      "11           0.915174        0.653509    0.762518  ...   0.760006   \n",
+      "0            0.798867        0.803443    0.801148  ...   0.807434   \n",
+      "1            0.779379        0.780234    0.779806  ...   0.780491   \n",
+      "2            0.807476        0.584033    0.677815  ...   0.688294   \n",
+      "3            0.780001        0.541475    0.639211  ...   0.635071   \n",
+      "4            0.809357        0.458495    0.585378  ...   0.596602   \n",
+      "5            0.783930        0.420151    0.547088  ...   0.542813   \n",
+      "6            0.799003        0.799406    0.799205  ...   0.804584   \n",
+      "7            0.779552        0.779552    0.779552  ...   0.779881   \n",
+      "8            0.807297        0.582490    0.676711  ...   0.686678   \n",
+      "9            0.780369        0.542217    0.639852  ...   0.635153   \n",
+      "10           0.809462        0.459564    0.586275  ...   0.597184   \n",
+      "11           0.784095        0.420775    0.547656  ...   0.543125   \n",
       "\n",
       "    test_support_0  test_precision_1  test_recall_1  test_f1_1  \\\n",
-      "0            14459          0.727208       0.260526   0.383618   \n",
-      "1            14459          0.712458       0.269967   0.391562   \n",
-      "2            14459          0.470631       0.658331   0.548878   \n",
-      "3            14459          0.463638       0.658842   0.544266   \n",
-      "4            14459          0.382174       0.771370   0.511117   \n",
-      "5            14459          0.375924       0.778515   0.507021   \n",
-      "6            14459          0.716802       0.269967   0.392215   \n",
-      "7            14459          0.709781       0.281449   0.403070   \n",
-      "8            14459          0.467126       0.658076   0.546398   \n",
-      "9            14459          0.457214       0.659862   0.540157   \n",
-      "10           14459          0.382494       0.774943   0.512185   \n",
-      "11           14459          0.375540       0.776474   0.506239   \n",
+      "0            14459          0.268990       0.252105   0.260274   \n",
+      "1            14459          0.195312       0.197755   0.196526   \n",
+      "2            14459          0.246435       0.485073   0.326829   \n",
+      "3            14459          0.203822       0.438122   0.278214   \n",
+      "4            14459          0.238019       0.610870   0.342563   \n",
+      "5            14459          0.208790       0.568512   0.305415   \n",
+      "6            14459          0.267390       0.257974   0.262597   \n",
+      "7            14459          0.195287       0.198775   0.197016   \n",
+      "8            14459          0.245775       0.486093   0.326478   \n",
+      "9            14459          0.203941       0.438377   0.278376   \n",
+      "10           14459          0.237849       0.609339   0.342145   \n",
+      "11           14459          0.209017       0.569023   0.305731   \n",
       "\n",
       "    test_support_1  test_accuracy  test_recall  test_precision   test_f1  \n",
-      "0             3919       0.821471     0.260526        0.727208  0.383618  \n",
-      "1             3919       0.821090     0.269967        0.712458  0.391562  \n",
-      "2             3919       0.769235     0.658331        0.470631  0.548878  \n",
-      "3             3919       0.764719     0.658842        0.463638  0.544266  \n",
-      "4             3919       0.685330     0.771370        0.382174  0.511117  \n",
-      "5             3919       0.677168     0.778515        0.375924  0.507021  \n",
-      "6             3919       0.821580     0.269967        0.716802  0.392215  \n",
-      "7             3919       0.822233     0.281449        0.709781  0.403070  \n",
-      "8             3919       0.767004     0.658076        0.467126  0.546398  \n",
-      "9             3919       0.760420     0.659862        0.457214  0.540157  \n",
-      "10            3919       0.685221     0.774943        0.382494  0.512185  \n",
-      "11            3919       0.677005     0.776474        0.375540  0.506239  \n",
+      "0             3919       0.694417     0.252105        0.268990  0.260274  \n",
+      "1             3919       0.655186     0.197755        0.195312  0.196526  \n",
+      "2             3919       0.573893     0.485073        0.246435  0.326829  \n",
+      "3             3919       0.515236     0.438122        0.203822  0.278214  \n",
+      "4             3919       0.500000     0.610870        0.238019  0.342563  \n",
+      "5             3919       0.448580     0.568512        0.208790  0.305415  \n",
+      "6             3919       0.691044     0.257974        0.267390  0.262597  \n",
+      "7             3919       0.654478     0.198775        0.195287  0.197016  \n",
+      "8             3919       0.572315     0.486093        0.245775  0.326478  \n",
+      "9             3919       0.515344     0.438377        0.203941  0.278376  \n",
+      "10            3919       0.500326     0.609339        0.237849  0.342145  \n",
+      "11            3919       0.448906     0.569023        0.209017  0.305731  \n",
       "\n",
       "[12 rows x 31 columns]\n"
      ]
@@ -201,8 +201,8 @@
     "param_grid = {\n",
     "    'kernel': ['sigmoid'],\n",
     "    #'degree': [3, 4, 5],\n",
-    "    'C': [0.01, 0.1, 1],\n",
-    "    'gamma': [0.01, 0.1, 1],\n",
+    "    'C': [0.1, 1],\n",
+    "    'gamma': [0.1, 1],\n",
     "    'random_state': [42],\n",
     "    'class_weight': [{0: 1, 1: 1}, {0: 1, 1: 3}, {0: 1, 1: 5}]\n",
     "}\n",
@@ -283,71 +283,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Fitting 3 folds for each of 12 candidates, totalling 36 fits\n",
-      "   vectorization  kernel degree    C  gamma  random_state  class_weight  \\\n",
-      "0          tfidf  linear      X  0.9    0.9            42  {0: 1, 1: 1}   \n",
-      "1          tfidf  linear      X  0.9    1.0            42  {0: 1, 1: 1}   \n",
-      "2          tfidf  linear      X  0.9    0.9            42  {0: 1, 1: 3}   \n",
-      "3          tfidf  linear      X  0.9    1.0            42  {0: 1, 1: 3}   \n",
-      "4          tfidf  linear      X  0.9    0.9            42  {0: 1, 1: 5}   \n",
-      "5          tfidf  linear      X  0.9    1.0            42  {0: 1, 1: 5}   \n",
-      "6          tfidf  linear      X  1.0    0.9            42  {0: 1, 1: 1}   \n",
-      "7          tfidf  linear      X  1.0    1.0            42  {0: 1, 1: 1}   \n",
-      "8          tfidf  linear      X  1.0    0.9            42  {0: 1, 1: 3}   \n",
-      "9          tfidf  linear      X  1.0    1.0            42  {0: 1, 1: 3}   \n",
-      "10         tfidf  linear      X  1.0    0.9            42  {0: 1, 1: 5}   \n",
-      "11         tfidf  linear      X  1.0    1.0            42  {0: 1, 1: 5}   \n",
-      "\n",
-      "    train_precision_0  train_recall_0  train_f1_0  ...  test_f1_0  \\\n",
-      "0            0.841133        0.980976    0.905688  ...   0.896338   \n",
-      "1            0.841133        0.980976    0.905688  ...   0.896338   \n",
-      "2            0.942462        0.853628    0.895848  ...   0.851213   \n",
-      "3            0.942462        0.853628    0.895848  ...   0.851213   \n",
-      "4            0.971079        0.761330    0.853507  ...   0.798761   \n",
-      "5            0.971079        0.761330    0.853507  ...   0.798761   \n",
-      "6            0.844768        0.980027    0.907385  ...   0.896693   \n",
-      "7            0.844768        0.980027    0.907385  ...   0.896693   \n",
-      "8            0.943711        0.853331    0.896249  ...   0.849625   \n",
-      "9            0.943711        0.853331    0.896249  ...   0.849625   \n",
-      "10           0.971476        0.764149    0.855429  ...   0.798916   \n",
-      "11           0.971476        0.764149    0.855429  ...   0.798916   \n",
-      "\n",
-      "    test_support_0  test_precision_1  test_recall_1  test_f1_1  \\\n",
-      "0            14459          0.721929       0.278898   0.402356   \n",
-      "1            14459          0.721929       0.278898   0.402356   \n",
-      "2            14459          0.481081       0.635876   0.547753   \n",
-      "3            14459          0.481081       0.635876   0.547753   \n",
-      "4            14459          0.408871       0.731564   0.524563   \n",
-      "5            14459          0.408871       0.731564   0.524563   \n",
-      "6            14459          0.719287       0.288339   0.411658   \n",
-      "7            14459          0.719287       0.288339   0.411658   \n",
-      "8            14459          0.477334       0.634090   0.544658   \n",
-      "9            14459          0.477334       0.634090   0.544658   \n",
-      "10           14459          0.408883       0.730544   0.524311   \n",
-      "11           14459          0.408883       0.730544   0.524311   \n",
-      "\n",
-      "    test_support_1  test_accuracy  test_recall  test_precision   test_f1  \n",
-      "0             3919       0.823321     0.278898        0.721929  0.402356  \n",
-      "1             3919       0.823321     0.278898        0.721929  0.402356  \n",
-      "2             3919       0.776091     0.635876        0.481081  0.547753  \n",
-      "3             3919       0.776091     0.635876        0.481081  0.547753  \n",
-      "4             3919       0.717216     0.731564        0.408871  0.524563  \n",
-      "5             3919       0.717216     0.731564        0.408871  0.524563  \n",
-      "6             3919       0.824246     0.288339        0.719287  0.411658  \n",
-      "7             3919       0.824246     0.288339        0.719287  0.411658  \n",
-      "8             3919       0.773914     0.634090        0.477334  0.544658  \n",
-      "9             3919       0.773914     0.634090        0.477334  0.544658  \n",
-      "10            3919       0.717325     0.730544        0.408883  0.524311  \n",
-      "11            3919       0.717325     0.730544        0.408883  0.524311  \n",
-      "\n",
-      "[12 rows x 31 columns]\n"
+      "Fitting 3 folds for each of 18 candidates, totalling 54 fits\n"
      ]
     }
    ],
@@ -645,14 +588,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Fitting 3 folds for each of 12 candidates, totalling 36 fits\n"
+      "Fitting 3 folds for each of 12 candidates, totalling 36 fits\n",
+      "   vectorization kernel degree    C  gamma  random_state  class_weight  \\\n",
+      "0          tfidf    rbf      X  0.1   0.01            42  {0: 1, 1: 1}   \n",
+      "1          tfidf    rbf      X  0.1   0.10            42  {0: 1, 1: 1}   \n",
+      "2          tfidf    rbf      X  0.1   0.01            42  {0: 1, 1: 3}   \n",
+      "3          tfidf    rbf      X  0.1   0.10            42  {0: 1, 1: 3}   \n",
+      "4          tfidf    rbf      X  0.1   0.01            42  {0: 1, 1: 5}   \n",
+      "5          tfidf    rbf      X  0.1   0.10            42  {0: 1, 1: 5}   \n",
+      "6          tfidf    rbf      X  1.0   0.01            42  {0: 1, 1: 1}   \n",
+      "7          tfidf    rbf      X  1.0   0.10            42  {0: 1, 1: 1}   \n",
+      "8          tfidf    rbf      X  1.0   0.01            42  {0: 1, 1: 3}   \n",
+      "9          tfidf    rbf      X  1.0   0.10            42  {0: 1, 1: 3}   \n",
+      "10         tfidf    rbf      X  1.0   0.01            42  {0: 1, 1: 5}   \n",
+      "11         tfidf    rbf      X  1.0   0.10            42  {0: 1, 1: 5}   \n",
+      "\n",
+      "    train_precision_0  train_recall_0  train_f1_0  ...  test_f1_0  \\\n",
+      "0            0.793240        0.997418    0.883689  ...   0.884385   \n",
+      "1            0.796586        0.998694    0.886264  ...   0.884999   \n",
+      "2            0.887491        0.810001    0.846977  ...   0.844292   \n",
+      "3            0.886097        0.899035    0.892519  ...   0.867329   \n",
+      "4            0.928302        0.605579    0.732991  ...   0.720520   \n",
+      "5            0.967896        0.569966    0.717448  ...   0.664028   \n",
+      "6            0.812976        0.991423    0.893376  ...   0.890564   \n",
+      "7            0.913844        0.993797    0.952145  ...   0.894079   \n",
+      "8            0.907536        0.826681    0.865223  ...   0.850051   \n",
+      "9            0.993816        0.968274    0.980879  ...   0.875759   \n",
+      "10           0.946845        0.660810    0.778382  ...   0.748682   \n",
+      "11           0.999195        0.958273    0.978306  ...   0.866722   \n",
+      "\n",
+      "    test_support_0  test_precision_1  test_recall_1  test_f1_1  \\\n",
+      "0            14459          0.836364       0.046951   0.088910   \n",
+      "1            14459          0.819853       0.056902   0.106419   \n",
+      "2            14459          0.463091       0.614698   0.528232   \n",
+      "3            14459          0.506186       0.469763   0.487295   \n",
+      "4            14459          0.352182       0.821638   0.493033   \n",
+      "5            14459          0.324447       0.857106   0.470712   \n",
+      "6            14459          0.775815       0.145700   0.245328   \n",
+      "7            14459          0.709517       0.254912   0.375070   \n",
+      "8            14459          0.479107       0.640725   0.548253   \n",
+      "9            14459          0.538047       0.458280   0.494970   \n",
+      "10           14459          0.372207       0.811942   0.510427   \n",
+      "11           14459          0.505235       0.480225   0.492412   \n",
+      "\n",
+      "    test_support_1  test_accuracy  test_recall  test_precision   test_f1  \n",
+      "0             3919       0.794809     0.046951        0.836364  0.088910  \n",
+      "1             3919       0.796224     0.056902        0.819853  0.106419  \n",
+      "2             3919       0.765861     0.614698        0.463091  0.528232  \n",
+      "3             3919       0.789204     0.469763        0.506186  0.487295  \n",
+      "4             3919       0.639678     0.821638        0.352182  0.493033  \n",
+      "5             3919       0.588965     0.857106        0.324447  0.470712  \n",
+      "6             3919       0.808848     0.145700        0.775815  0.245328  \n",
+      "7             3919       0.818860     0.254912        0.709517  0.375070  \n",
+      "8             3919       0.774839     0.640725        0.479107  0.548253  \n",
+      "9             3919       0.800577     0.458280        0.538047  0.494970  \n",
+      "10            3919       0.667864     0.811942        0.372207  0.510427  \n",
+      "11            3919       0.788878     0.480225        0.505235  0.492412  \n",
+      "\n",
+      "[12 rows x 31 columns]\n"
      ]
     }
    ],
